# Sovereign-Economy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md
.claude/scripts/: verify.sh
.github/: markdown-link-check.json
.github/workflows/: ci.yml  nightly.yml  publish-images.yml
config/: alerts.yml  prometheus.yml
contracts/: .solhint.json  echidna.yaml  foundry.toml  hardhat.config.ts  package-lock.json  package.json  slither.config.json  tsconfig.json
contracts/abi/: IAgentAccount.abi.json  IBridgeExecutor.abi.json  ICircuitBreaker.abi.json  IDAESGovernor.abi.json  IGuardianTimelock.abi.json  (+2 more)
deploy/: .env.example  .env.staging.example  Caddyfile  deploy-staging.sh  docker-compose.prod.yaml  docker-compose.secrets.yaml  docker-compose.tagged.yaml  docker-compose.yaml  promote-to-prod.sh  rollback.sh
docs/: architecture.md  audit-notes.md  audit-package.md  deploy-akash.md  deploy-live.md  runbook.md  secrets-hardening.md
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: caddy-validate.sh  docs-sync.sh  execute-setpeer.sh  gen-testnet-env.sh  generate-ipfs-pass.sh  post-deploy-smoke.sh  preflight.sh  sync-abi.sh
services/agent-swarm-runtime/: Dockerfile  pyproject.toml
services/agent-swarm-runtime/src/: agents.py  consensus.py  determinism.py  main.py  seed_source.py
services/agent-swarm-runtime/tests/: test_determinism.py
services/graph-rag-indexer/: Dockerfile  pyproject.toml  schema.json
services/graph-rag-indexer/src/: main.py  weaviate_client.py
services/graph-rag-indexer/src/ingesters/: ais.py  chainlink.py  comtrade.py  world_bank.py
services/mcp-gateway/: Dockerfile  pyproject.toml
services/mcp-gateway/app/: auth.py  main.py  routes.py
services/mcp-gateway/app/handlers/: __init__.py  audit_log.py  bridge_initiate.py  contract_simulate.py  supply_chain.py  wallet_sign.py
spec/: components.yaml
(+115 files in other folders)
